# rust_test

./: Cargo.toml  README.md  index.html
app/: Cargo.toml  Makefile.toml
app/src/: lib.rs
pkg/: style.css
src/: main.rs
