[package]
version = "0.1.0"
name = "rust_test"
repository = "https://github.com/LiveViewTech/rust-test"
authors = ["Spencer Davies <spencerhdavies@gmail.com>"]
description = "Rust/wasm test for WebDev applicants"
readme = "./README.md"
edition = "2018"

[workspace]
members = ["app"]

[dependencies]
actix-files = "0.3.0"
actix-web = "3.0.2"
serde = "1.0.116"
serde_derive = "1.0.116"