[package]
version = "0.1.0"
name = "app"
authors = ["Spencer Davies <spencerhdavies@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
wasm-bindgen = "^0.2.67"
serde = "1.0.116"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']